oldtraefik/whoami-route.yaml
---
apiVersion: apiextensions.k8s.io/v1
kind: IngressRoute
metadata:
  name: whoami-route
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
    - traefik
  routes:                           # [2]
  - kind: Rule
    match: Host(`asicforecast.com`) # [3]
    priority: 10                    # [4]
    # middlewares:                    # [5]
    # - name: middleware1             # [6]
    #   namespace: default            # [7]
    services:                       # [8]
    - kind: Service
      name: whoami
      namespace: traefik
      passHostHeader: true
      port: 80
      responseForwarding:
        flushInterval: 1ms
      scheme: https
      serversTransport: transport
      sticky:
        cookie:
          httpOnly: true
          name: cookie
          secure: true
          sameSite: none
      strategy: RoundRobin
      weight: 10
  tls:                              # [9]
    # secretName: supersecret         # [10]
    # options:                        # [11]
    #   name: opt                     # [12]
    #   namespace: traefik            # [13]
    certResolver: cloudflare               # [14]
    domains:                        # [15]
    - main: asicforecast.com             # [16]
      # sans:                         # [17]
      # - a.example.net
      # - b.example.net
